[package]
name = "gbm"
description = "libgbm bindings for rust"
license = "MIT"
documentation = "https://docs.rs/gbm"
repository = "https://github.com/Smithay/gbm.rs"
version = "0.6.0"
keywords = ["wayland", "gbm", "drm", "bindings"]
categories = ["external-ffi-bindings"]
authors = ["Victor Brekenfeld <github@drakulix.de>"]
exclude = [".gitignore", ".travis.yml", ".rustfmt.toml", ".github"]

[dependencies]
gbm-sys = { version = "0.1", path = "./gbm-sys" }
libc = "0.2"
bitflags = "1.2"
wayland-server = { version = "0.28", optional = true }
drm = { version = "0.4.0-alpha1", git = "https://github.com/Drakulix/drm-rs", branch = "next", optional = true }
drm-fourcc = "2.0"

[dev-dependencies]
drm = { version = "0.4.0-alpha1", git = "https://github.com/Drakulix/drm-rs", branch = "next" }

[features]
default = ["import-wayland", "import-egl", "drm-support"]
import-wayland = ["wayland-server"]
import-egl = []
drm-support = ["drm"]
gen = ["gbm-sys/gen"]

[workspace]
members = [
  "gbm-sys"
]
