[package]
name = "gbm"
description = "libgbm bindings for rust"
license = "MIT"
documentation = "https://docs.rs/gbm"
repository = "https://github.com/Smithay/gbm.rs"
version = "0.9.0"
keywords = ["wayland", "gbm", "drm", "bindings"]
categories = ["external-ffi-bindings"]
authors = ["Victoria Brekenfeld <github@drakulix.de>"]
exclude = [".gitignore", ".travis.yml", ".rustfmt.toml", ".github"]

[dependencies]
libc = "0.2"
bitflags = "1.2"
drm-fourcc = "2.2"

[dependencies.gbm-sys]
version = "0.2.1"
path = "./gbm-sys"

[dependencies.drm]
version = "0.7.0"
optional = true

[dependencies.wayland-server]
version = "0.30"
optional = true

[dependencies.wayland-backend]
version = "0.1"
features = ["server_system"]
optional = true

[dev-dependencies.drm]
version = "0.7.0"

[features]
default = ["import-wayland", "import-egl", "drm-support"]
import-wayland = ["wayland-server", "wayland-backend"]
import-egl = []
drm-support = ["drm"]
gen = ["gbm-sys/gen"]

[workspace]
members = [
  "gbm-sys"
]
