[package]
name = "gbm"
description = "libgbm bindings for rust"
license = "MIT"
documentation = "https://docs.rs/gbm"
repository = "https://github.com/Smithay/gbm.rs"
version = "0.18.0"
keywords = ["wayland", "gbm", "drm", "bindings"]
categories = ["external-ffi-bindings"]
authors = ["Victoria Brekenfeld <github@drakulix.de>"]
exclude = [".gitignore", ".travis.yml", ".rustfmt.toml", ".github"]
edition = "2021"

[dependencies]
libc = "0.2"
bitflags = "2"
drm-fourcc = "2.2"

[dependencies.gbm-sys]
version = "0.4.0"
path = "./gbm-sys"

[dependencies.drm]
version = "0.14.0"
optional = true

[dependencies.wayland-server]
version = "0.31"
optional = true

[dependencies.wayland-backend]
version = "0.3"
features = ["server_system"]
optional = true

[dependencies.serde]
# Minimal serde version that can compile serde-annotated bitflags v2.
# Workaround that allows -Z minimal-versions build to succeed despite bitflags
# crate not declaring minimum versions of its dependencies precisely enough.
version = "1.0.103"
features = ["derive"]
optional = true

[dev-dependencies.drm]
version = "0.14.0"

[features]
default = ["import-wayland", "import-egl", "drm-support"]
import-wayland = ["wayland-server", "wayland-backend"]
import-egl = []
drm-support = ["drm"]
use_bindgen = ["gbm-sys/use_bindgen"]
serde = ["dep:serde", "bitflags/serde"]

[workspace]
members = [
  "gbm-sys"
]
