[package]
name = "gbm-sys"
version = "1.0.0"
authors = ["Drakulix (Victor Brekenfeld)"]
build = "build.rs"
description = "Bindgen generated unsafe libgbm wrapper"
documentation = "https://Drakulix.github.io/gbm.rs/gbm-sys"
repository = "https://github.com/Drakulix/gbm.rs/tree/master/gbm-sys"
keywords = ["gdm", "bindings"]
categories = ["external-ffi-bindings"]
license = "MIT"

[lib]
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.22"

[dependencies]
libc = "0.2"
