[package]
name = "gbm-sys"
version = "0.1.0"
authors = ["Drakulix (Victor Brekenfeld)"]
build = "build.rs"
description = "Bindgen generated unsafe libgbm wrapper"
documentation = "https://Drakulix.github.io/gbm.rs/gbm-sys"
repository = "https://github.com/Drakulix/gbm.rs/tree/master/gbm-sys"
keywords = ["gbm", "bindings"]
categories = ["external-ffi-bindings"]
license = "MIT"

[lib]
path = "src/lib.rs"

[build-dependencies.bindgen]
version = "0.58"
optional = true

[dependencies]
libc = "0.2"

[features]
gen = ["bindgen"]
update_bindings = ["gen"]
