[package]
name = "gbm-sys"
version = "0.2.2"
authors = ["Drakulix (Victor Brekenfeld)"]
build = "build.rs"
description = "Bindgen generated unsafe libgbm wrapper"
documentation = "https://Drakulix.github.io/gbm.rs/gbm-sys"
repository = "https://github.com/Drakulix/gbm.rs/tree/master/gbm-sys"
keywords = ["gbm", "bindings"]
categories = ["external-ffi-bindings"]
license = "MIT"

[lib]
path = "src/lib.rs"

[build-dependencies.bindgen]
version = "0.69"
optional = true

# Specify version of bindgen deps to fix `check-minimal` test
[build-dependencies]
proc-macro2 = { version = "1.0.69", optional = true }
regex = { version = "1.10", optional = true }

[dependencies]
libc = "0.2"

[features]
gen = ["bindgen", "dep:proc-macro2", "dep:regex"]
update_bindings = ["gen"]
